Refactor Guitar.equals to use pattern variables